--- a/src/components/TweetList/TweetList.html
+++ b/src/components/TweetList/TweetList.html
@@ -11,3 +11,6 @@
 
     <ion-spinner *ngIf="isLoading"></ion-spinner>
 </ion-list>
+<ion-infinite-scroll (ionInfinite)="$event.waitFor(doInfinite())">
+    <ion-infinite-scroll-content></ion-infinite-scroll-content>
+</ion-infinite-scroll>
