--- a/src/components/TweetList/TweetList.html
+++ b/src/components/TweetList/TweetList.html
@@ -1,13 +1,9 @@
-<ion-fab right bottom>
-    <button ion-fab color="light"><ion-icon name="arrow-dropleft"></ion-icon></button>
-    <ion-fab-list side="left">
-        <button ion-fab (click)="toggleSearchOnline($event)"><ion-icon [name]="searchOnline ? 'cloud-done' : 'cloud'"></ion-icon></button>
-    </ion-fab-list>
-</ion-fab>
-<ion-searchbar #searchbar (ionInput)="searchFn($event)"></ion-searchbar>
+<ion-spinner *ngIf="tweetsState.isFetching"></ion-spinner>
 <ion-list>
-    <div class="new-tweets-indicator" *ngIf="tweetBuffer.length > 0;" (click)="flushBuffer()">There are {{tweetBuffer.length}} new tweets available</div>
-    <ion-item *ngFor="let tweet of _tweets | search: term:searchOnline" (click)="showDetail(tweet)">
+    <ion-item *ngIf="!tweetsState.isFetching && !tweetsState.tweets.length">
+        <h2>No tweets available!</h2>
+    </ion-item>
+    <ion-item *ngFor="let tweet of (tweetsState.tweets | search: filter:searchOnline)" (click)="showDetail(tweet)">
         <ion-avatar item-start>
             <img src="{{tweet.user.profile_image_url_https}}">
         </ion-avatar>
@@ -15,9 +11,4 @@
         <h3>{{ tweet.text }}</h3>
         <p><span *ngIf="tweet.retweet_count">RTs {{ tweet.retweet_count }}</span><span *ngIf="tweet.favorited">Favs {{ tweet.favorite_count }}</span></p>
     </ion-item>
-
-    <ion-spinner *ngIf="isLoading"></ion-spinner>
 </ion-list>
-<ion-infinite-scroll (ionInfinite)="$event.waitFor(doInfinite())">
-    <ion-infinite-scroll-content></ion-infinite-scroll-content>
-</ion-infinite-scroll>
